# dotfiles

./: .bashrc  .gitmodules  .xinitrc  README.md
.bashrc.d/: .bashrc  aliases.sh
.config/alacritty/: alacritty.toml
.config/nvim/: init.lua  lazy-lock.json
.config/nvim/lua/: .gitignore  Makefile
.config/nvim/lua/default/: Makefile  flsproject.fnl  init.lua
.config/nvim/lua/default/src/: completion.fnl  conjure.fnl  init.fnl  key.fnl  pkg.fnl  theme.fnl  treesitter.fnl  types.moon
.config/nvim/lua/default/src/tests/: init.lua  test_types.lua
.config/nvim/lua/src/: config_util.fnl
.config/picom/: picom.conf
.config/polybar/: config.ini
.config/xmonad/: autostart.sh  xmcfg.cabal  xmonad.hs
.config/xmonad/lib/: Keys.hs  Sticky.hs
.stumpwm.d/: autostart.sh  init.lisp  key.lisp
