cabal-version:      3.0
name:               xmcfg
version:            0.1.0.0
-- synopsis:
-- description:
license:            MIT
author:             Lily
maintainer:         unlovablep@gmail.com
-- copyright:
build-type:         Simple
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable xmcfg
    import:           warnings
    main-is:          xmonad.hs
    other-modules:    Keys
                    , Sticky
    -- other-extensions:
    build-depends:
          base ^>=4.18.3.0
        , containers
        , X11
        , xmonad >= 0.18.0
        , xmonad-contrib >= 0.18.1

    hs-source-dirs:   . lib
    default-language: Haskell2010
